--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,21 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    //Picasso - Image loader
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // RecyclerView and cardview
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
 
-    implementation 'com.android.support:preference-v7:27.1.1'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    //ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
+
 
 }
