--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     //ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
+    //Support design
+    implementation "com.android.support:design:27.1.1"
+
 
 
 }
