Udacity Movie app: Stage 1 complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activity.DetailActivity"/>
+        <activity android:name=".Activity.DetailActivity"
+            android:theme="@style/noAppBar"/>
     </application>
 
 </manifest>
