--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity android:name=".Activity.DetailActivity"
-            android:theme="@style/noAppBar"/>
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
